--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,8 +7,8 @@
 	alt="tremendously green hops"
 	title="hops farm">
 <h1>Ramble Farms</h1>
-<p>
-<slogan>Where fun and farming meet.</p>
+<h2>
+<slogan>Where fun and farming meet.</h2>
 	<p>Welcome to Ramble Farms!  We are a hops, fruit and vegetable farm in Arvada, Colorado.  </p>
 	<p>What started as an acre in the spring of 2019 has grown to 9 acres and we are now a complete processing facility which includes a Wolf harvesting machine, a three level commercial dryer and a state of the art pelletizing system.
 
