--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -3,21 +3,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"><title>Ramble Farms</title>
 <body>
     <div class="wrapper">
-    <header>HEADER
+    <header>
         <h1>Ramble Farms</h1>
         <h2>Where fun and farming meet!</h2>
-    </header>
-    <nav>NAV
-        <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum.</p>
+    <nav>
+        <p>Check out our latest creations!</p>
+        <img src="https://www.sandiegomagazine.com/images/cache/cache_7/cache_9/cache_b/star-b-ranch-ramona-3e027b97.jpeg?ver=1538776635&aspectratio=1.4953271028037" alt="hops farm"> 
     </nav>
+    <body>
     <section id="two_column" class="clearfix"> 
         <aside id="left">
-            <p>ASIDE<p>
             <p>Welcome to Ramble Farms!  We are a hops, fruit and vegetable farm in Arvada, Colorado.  </p>
         <p>What started as an acre in the spring of 2019 has grown to 9 acres and we are now a complete processing facility which includes a Wolf harvesting machine, a three level commercial dryer and a state of the art pelletizing system.</p>
          <p>We offer a variety of hops, depending on the time of year:</p>
     <ul>
-   </LH>
             <li>Rhizomes in the spring</li>
             <li>Wet hops in August</li>
             <li>Pellets by early November</li>
@@ -25,7 +24,6 @@
         </aside>
 
     <article id="right">
-        <p>ARTICLE</p>
         <p>Hoppity Hop!</p>
             <p>Hops pellets don’t get any fresher than this! In addition, we provide pelletizing/packaging services to growers seeking to convert their whole cone hops into quality pellets.</p>
 
@@ -34,7 +32,9 @@
 <p>In late spring and early summer, we have weekly "Market Days" that are open to the public for purchasing fresh fruits and vegetables.  Check back in the spring for the latest updates!</p>
             </article>
         </section>
-    <footer>FOOTER<P><a href="mailto:info@ramblefarms.com?Subject=Hello%20again" target="_top">Contact Us!</a></P>
-    </footer>
+    </body>
+    <footer>
+        <div>
+            <a href="mailto:info@ramblefarms.com?Subject=Hello%20again"  rel="nofollow">Contact Us!</a>
     </div>
-</body>
+        </footer>
